@@ -1,0 +1,39 @@
+// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.ActiveRecord.Tests.Model
+{
+	using System;
+
+	[ActiveRecord]
+	public class ProductWithGuid : ActiveRecordBase<ProductWithGuid>
+	{
+		private int _id;
+		private Guid key;
+
+		[PrimaryKey(PrimaryKeyType.Native)]
+		public int Id
+		{
+			get { return _id; }
+			set { _id = value; }
+		}
+
+		[Property("`Key`")]
+		public Guid Key
+		{
+			get { return key; }
+			set { key = value; }
+		}
+	}
+}
