@@ -366,6 +366,7 @@
     <Compile Include="Framework\Config\DefaultFlushType.cs" />
     <Compile Include="Framework\AbstractNHContributor.cs" />
     <Compile Include="Framework\NHSearchContributor.cs" />
+    <Compile Include="Framework\Queries\ValueAndTypeTuple.cs" />
     <Compile Include="Framework\StatelessSessionWrapper.cs" />
     <Compile Include="Framework\INHContributor.cs" />
     <Compile Include="Framework\Internal\EventListener\EventListenerConfig.cs" />
